--- a/fly.toml
+++ b/fly.toml
@@ -16,7 +16,7 @@ primary_region = "gru"
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = true
-  auto_start_machines = true
+  auto_stop_machines = false
+  auto_start_machines = false
   min_machines_running = 0
   processes = ["app"]
